presque complètement fonctionnel, il manque l'image de fin et il faut régler les timing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,11 @@
 @import "base";
 @import "layout";
 @import "modules/example";
+@import "modules/degrade.scss";
+@import "modules/text-interactif";
+@import "modules/text-description";
+@import "modules/logo";
+@import "modules/accessibility-button";
+@import "modules/hand-circles";
+@import "modules/final-screen";
+@import "modules/all";
