--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,3 +12,10 @@ img,
 video {
   display: block;
 }
+.degrade {
+  display: flex;
+  flex-direction: column;
+}
+body {
+  background-color: #3a07f2;
+}
