ajout de l'image final, amélioration des timing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,5 +8,5 @@
 @import "modules/logo";
 @import "modules/accessibility-button";
 @import "modules/hand-circles";
-@import "modules/final-screen";
 @import "modules/all";
+@import "modules/image-background";
