problème de hauteur résolu, timing réglé complètement, plus de bug

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 @import "base";
 @import "layout";
 @import "modules/example";
-@import "modules/degrade.scss";
+@import "modules/gradient.scss";
 @import "modules/text-interactif";
 @import "modules/text-description";
 @import "modules/logo";
