--- a/src/scss/modules/_image-background.scss
+++ b/src/scss/modules/_image-background.scss
@@ -2,10 +2,10 @@
   display: flex;
   position: fixed;
   top: 0;
-  height: 100vh;
+  height: 1920px;
   z-index: -20;
   img {
-    width: 1080px;
-    height: 1920px;
+    width: 100%;
+    height: 100%;
   }
 }
